--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,7 +12,7 @@ edit_uri: edit/main/docs/
 copyright: 'Copyright &copy; 2024 UArizona DataLab'
 
 nav:
-  - 'Home': index.md
+  - 'Home': 'docs/index.md'
  
 
 # Configuration
