--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_author: DataLab Team
 site_url: https://ua-datalab.github.io
 
 # Repository
-docs_dir: docs/
+docs_dir: ./docs
 repo_name: UArizona DataLab Github
 repo_url: https://github.com/ua-datalab/ua-datalab.github.io
 edit_uri: edit/main/docs/
@@ -12,7 +12,7 @@ edit_uri: edit/main/docs/
 copyright: 'Copyright &copy; 2024 UArizona DataLab'
 
 nav:
-  - 'Home': 'docs/index.md'
+  - 'Home': index.md
  
 
 # Configuration
