--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -16,5 +16,5 @@
          run:  pip install -r requirements.txt 
        - name: Deploy docs
          run: mkdocs gh-deploy --force
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
