--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -3,6 +3,9 @@
    push:
      branches:
        - main
+   permissions:
+     contents: read
+     pages: write   
  jobs:
    build:
      name: Deploy docs
