--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -2,15 +2,15 @@
  on:
    push:
      branches:
-       - master
        - main
- permissions:
-   actions: write
-   contents: write
+# permissions:
+#   actions: write
+#   contents: write
 #   deployments: write
 
 jobs:
-  deploy:
+  build:
+    name: Deploy docs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
