--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -22,7 +22,9 @@ jobs:
           key: ${{github.ref}}  
           path: .cache
       - name: run requirements file
-        run:  pip install mkdocs-material 
+#        run:  pip install mkdocs-material
+        run:  pip install -r requirements.txt
+	run: pip install -e .
       - name: Deploy docs
         run: mkdocs gh-deploy --force
 #        env:
