--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -15,9 +15,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
-        with:
-          python-version: 3.10.9
       - uses: actions/cache@v2  
+#        with:
+#          python-version: 3.10.9
+
         with:
           key: ${{github.ref}}  
           path: .cache
@@ -28,3 +29,4 @@ jobs:
         run: mkdocs gh-deploy --force
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+actions/checkout@v3, actions/setup-python@v4, actions/cache@v2.
