--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - uses: actions/cache@v2  
-#        with:
-#          python-version: 3.10.9
+        with:
+          python-version: 3.11.5
 
         with:
           key: ${{github.ref}}  
