--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -3,10 +3,10 @@ on:
  push:
    branches:
      - main
-# permissions:
-#   actions: write
-#   contents: write
-#   deployments: write
+ permissions:
+   actions: write
+   contents: write
+   deployments: write
 
 jobs:
   build:
