--- a/.github/workflows/ghpages.yml
+++ b/.github/workflows/ghpages.yml
@@ -4,6 +4,9 @@ on:
    branches:
      - main
 
+permissions:
+  contents: write
+  
 jobs:
   build:
     name: Deploy docs
@@ -18,5 +21,5 @@ jobs:
       - name: Deploy docs
         run: mkdocs gh-deploy --force
 #
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
