--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,8 @@ nav:
     - 'About': about.md
     - 'DataLab Team': members.md
     - 'Consultations': consultations.md
-    
+    - 'AI/ML Development': apps-dev.md
+
 theme: 
   name: material
 
