--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
 
 theme: 
   name: material
+  logo: /Users/carlos/Home/UADataLab/ua-datalab.github.io/docs/images/UADLSquareLogo.png
 
   # setting features for the navigation tab
   features:
