--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
     - 'About': about.md
     - 'DataLab Team': members.md
     - 'Consultations': consultations.md
-    - 'Events': events.md
+    - 'Special Events': events.md
     - 'AI/ML Development': apps-dev.md
     - 'PHIRE': phire.md
 
