--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,8 +92,8 @@ extra:
       link: https://github.com/ua-datalab
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/company/uarizona-datalab/
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/UArizonaDataLab
+#    - icon: fontawesome/brands/twitter
+#      link: https://twitter.com/UArizonaDataLab
     - icon: fontawesome/brands/facebook
       link: https://www.facebook.com/profile.php?id=61556132138807
     - icon: fontawesome/brands/youtube
