--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ nav:
     - 'Home': index.md
     - 'About': about.md
     - 'DataLab Team': members.md
-    - 'Data Science Ecosystem': DSEcosystem.md
+    - 'Data Science Ecosystem': DSecosystem.md
     - 'Consultations': consultations.md
     - 'Events Calendar': events.md
     - 'AI/ML Development': apps-dev.md
