--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,7 +24,7 @@ nav:
     - 'Consultations': consultations.md
     - 'Events Calendar': events.md
     - 'AI/ML Development': apps-dev.md
-    - 'AI Verde': aiverde.md
+    - 'Ai-VERDE': aiverde.md
     - 'Capstone Projects': capstone.md
     - 'ML Learning Paths': mlpaths.md
     - 'PHIRE': phire.md
