--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
     - 'Ai-VERDE': aiverde.md
     - 'Capstone Projects': capstone.md
     - 'ML Learning Paths': mlpaths.md
+    - 'TREX: Training for Research Experience' : 'https://github.com/ua-datalab/TREX/wiki' 
     - 'PHIRE': phire.md
 
 
