--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,9 @@ theme:
   icon:
     logo: logo
 
+extra_css:
+    - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css
+
 extra:
   social:
     - icon: fontawesome/solid/school
